k8s/bin/jenkins/jenkins.deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: amitkshirsagar13/jenkins-k8s-master:latest
        imagePullPolicy: Always
        ports:
          - name: http-port
            containerPort: 8080
          - name: slave-port
            containerPort: 5000
          - name: jnlp-port
            containerPort: 50000
        volumeMounts:
          - name: docker-socket
            readOnly: true
            mountPath: /var/run/docker.sock
          # - name: jenkins-home
          #   mountPath: /var/jenkins_home
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: jenkins-home
          hostPath:
            path: /data/jenkins_home
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: slave
  - port: 50000
    targetPort: 50000
    protocol: TCP
    name: jnlp
  selector:
    app: jenkins
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  tls:
  - hosts:
    - jenkins.gce.k8m.k8cluster.io
    - jenkins.gce.k8n1.k8cluster.io
    secretName: jenkins-secret
  rules:
  - host: jenkins.gce.k8m.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 8080
  - host: jenkins.gce.k8n1.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 8080
